KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/Antra_Employee__c.object-meta.xml
<CustomObject>
    <label>Antra Employee</label>
    <nameField>
        <displayFormat>AEM-{000}</displayFormat>
        <label>Antra Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Antra Employees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>