KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Area_Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Area_Pin_code__c</fullName>
    <label>Area Pin code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>