KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Casual_Leaves_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Casual_Leaves_Remaining__c</fullName>
    <formula>Casual_Leave_Allotted__c - Casual_Leaves_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casual Leaves Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>