KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Casual_Leaves_Taken__c.field-meta.xml
<CustomField>
    <fullName>Casual_Leaves_Taken__c</fullName>
    <label>Casual Leaves Taken</label>
    <summarizedField>Antra_Employee_Leaves__c.leave_duration__c</summarizedField>
    <summaryFilterItems>
        <field>Antra_Employee_Leaves__c.Leave_Type__c</field>
        <operation>equals</operation>
        <value>casual leave</value>
    </summaryFilterItems>
    <summaryForeignKey>Antra_Employee_Leaves__c.Employee_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>