KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Earned_Leaves_Allotted__c.field-meta.xml
<CustomField>
    <fullName>Earned_Leaves_Allotted__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Earned Leaves Allotted</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>