KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Earned_Leaves_Remaing__c.field-meta.xml
<CustomField>
    <fullName>Earned_Leaves_Remaing__c</fullName>
    <formula>Earned_Leaves_Allotted__c - Earned_Leaves_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Leaves Remaing</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>