KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Employee_Mail_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Mail_Id__c</fullName>
    <label>Employee Mail Id</label>
    <type>Email</type>
</CustomField>