KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Employee_salary__c.field-meta.xml
<CustomField>
    <fullName>Employee_salary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Employee salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>