KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Reporting_Mnager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Mnager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Mnager</label>
    <referenceTo>Antra_Employee__c</referenceTo>
    <relationshipLabel>Antra Employees</relationshipLabel>
    <relationshipName>Antra_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>