KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Sick_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leaves__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Sick Leaves</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>