KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Sick_Leaves_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leaves_Remaining__c</fullName>
    <formula>Sick_Leaves__c - Sick_Leaves_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sick Leaves Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>