KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Street_1_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_1_Address__c</fullName>
    <label>Street 1 Address:</label>
    <length>25</length>
    <type>Text</type>
</CustomField>