KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Antra_Employee__c/fields/Street_2_address__c.field-meta.xml
<CustomField>
    <fullName>Street_2_address__c</fullName>
    <label>Street 2 address:</label>
    <length>25</length>
    <type>Text</type>
</CustomField>